--- a/literacy/instruments/bonds.html
+++ b/literacy/instruments/bonds.html
@@ -71,6 +71,7 @@
 <li><a href="#_4">В каких случаях какие облигации выбирать</a></li>
 <li><a href="#_5">Калькулятор стоимости облигаций</a></li>
 <li><a href="#_6">Виды доходности облигаций</a></li>
+<li><a href="#_7">Инструменты для выбора облигаций</a></li>
 </ul>
 </div>
 <h2 id="_1">Общие представления</h2>
@@ -180,6 +181,12 @@
 </ol>
 <p>Для конкретного выпуска облигаций все доходности можно увидеть на <a href="https://www.moex.com/ru/bondization/calc">на сайте Мосбиржи</a>, в графу «расчёт доходности по цене» нужно вводить планируемую цену покупки.</p>
 <p>Наиболее точное сравнение с банковским вкладом даёт простая доходность к погашению, но она не учитывает периодичности поступления купонов и их размера. Чтобы их учесть нужно пользоваться эффективной доходностью, но она пригодна только для сравнения разных выпусков облигаций между собой. А для облигаций с переменным купоном и индексируемым номиналом никакая из этих величин не имеет смысла, для их оценки нужно строить более сложные модели денежных потоков, и проще просто полагаться на то, что рыночная цена выравнивает эффективные доходности всех инструментов.</p>
+<h2 id="_7">Инструменты для выбора облигаций</h2>
+<ul>
+<li><a href="https://smart-lab.ru/q/ofz/">Раздел облигаций Смартлаба</a> — здесь можно бегло выбрать интересные облигации.</li>
+<li><a href="https://bonds.finam.ru/">Справочник по выпускам облигаций Финама</a> — здесь надо найти выбранные выпуски, посмотреть графики платежей и документы по выпуску.</li>
+<li><a href="https://www.e-disclosure.ru/">Интерфакс: обязательное раскрытие отчётности эмитентов</a> — здесь надо найти и почитать отчётность по выбранному эмитенту облигаций, если это корпоративная облигация, и оценить, насколько вы доверяете ему свои деньги.</li>
+</ul>
         </div>
         <aside>
                 <div class="share-buttons">
