--- a/literacy/instruments/cash.html
+++ b/literacy/instruments/cash.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/style.css" />
     <link href="/feed.atom.xml" type="application/atom+xml" rel="alternate" title="Житейские воззрения пана Семушельского Atom Feed" />
         <meta name="description" content="Зачем нужны и какие риски несут наличные деньги." />
-        <meta name="keywords" content="финансовая грамотность, наличные деньги, риски" />
+        <meta name="keywords" content="финансовая грамотность, инструменты сбережений, наличные деньги, валюта, доллары, риски, доходность" />
 
 <meta property="og:locale" content="ru" />
 
@@ -17,7 +17,7 @@
 
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2020-01-01" />
-        <meta property="og:article:modified_time" content="2020-01-02" />
+        <meta property="og:article:modified_time" content="2020-01-04" />
 <meta property="og:title" content="Наличные деньги" />
 <meta property="og:url" content="https://onfin.github.io/literacy/instruments/cash" />
 
@@ -58,7 +58,7 @@
             <h1>Наличные деньги</h1>
             <div class="meta">
                     <p class="description">Зачем нужны и какие риски несут наличные деньги.</p>
-                        <p> Обновлено: <time>2020-01-02</time> </p>
+                        <p> Обновлено: <time>2020-01-04</time> </p>
             </div>
         </header>
 
