--- a/literacy/instruments/bonds.html
+++ b/literacy/instruments/bonds.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/style.css" />
     <link href="/feed.atom.xml" type="application/atom+xml" rel="alternate" title="Житейские воззрения пана Семушельского Atom Feed" />
         <meta name="description" content="Специфика, риски и доходность облигаций." />
-        <meta name="keywords" content="финансовая грамотность, облигации" />
+        <meta name="keywords" content="финансовая грамотность, инструменты сбережений, облигации" />
 
 <meta property="og:locale" content="ru" />
 
@@ -17,7 +17,7 @@
 
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2020-01-03" />
-        <meta property="og:article:modified_time" content="2020-01-03" />
+        <meta property="og:article:modified_time" content="2020-01-04" />
 <meta property="og:title" content="Облигации" />
 <meta property="og:url" content="https://onfin.github.io/literacy/instruments/bonds" />
 
@@ -58,7 +58,7 @@
             <h1>Облигации</h1>
             <div class="meta">
                     <p class="description">Специфика, риски и доходность облигаций.</p>
-                        <p> Обновлено: <time>2020-01-03</time> </p>
+                        <p> Обновлено: <time>2020-01-04</time> </p>
             </div>
         </header>
 
