--- a/literacy/instruments/deposits2.html
+++ b/literacy/instruments/deposits2.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/style.css" />
     <link href="/feed.atom.xml" type="application/atom+xml" rel="alternate" title="Житейские воззрения пана Семушельского Atom Feed" />
         <meta name="description" content="Риски и доходность банковских вкладов" />
-        <meta name="keywords" content="финансовая грамотность, банковские счета, вклады, риски, АСВ, проверка банка" />
+        <meta name="keywords" content="финансовая грамотность, банковские счета, вклады, риски, доходность, валютные вклады, АСВ, проверка банка" />
 
 <meta property="og:locale" content="ru" />
 
@@ -17,7 +17,7 @@
 
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2020-01-02" />
-        <meta property="og:article:modified_time" content="2020-01-02" />
+        <meta property="og:article:modified_time" content="2020-01-04" />
 <meta property="og:title" content="Банковские счета, карты и вклады" />
 <meta property="og:url" content="https://onfin.github.io/literacy/instruments/deposits2" />
 
@@ -58,7 +58,7 @@
             <h1>Банковские счета, карты и вклады</h1>
             <div class="meta">
                     <p class="description">Риски и доходность банковских вкладов</p>
-                        <p> Обновлено: <time>2020-01-02</time> </p>
+                        <p> Обновлено: <time>2020-01-04</time> </p>
             </div>
         </header>
 
