--- a/literacy/index.html
+++ b/literacy/index.html
@@ -91,6 +91,7 @@
 <li><a href="/literacy/instruments/cash">Наличные деньги</a></li>
 <li><a href="/literacy/instruments/deposits2">Банковские счета, карты и вклады</a></li>
 <li><a href="/literacy/instruments/bonds">Облигации</a></li>
+<li><a href="/literacy/instruments/gold">Золото</a></li>
 </ol>
         </div>
         <aside>
