--- a/literacy/instruments/bonds.html
+++ b/literacy/instruments/bonds.html
@@ -213,6 +213,7 @@
                 <a href="/literacy"> &uarr; Грамотность &uarr; </a>
     </div>
     <div class="pure-u-1-3 right">
+                <a href="/literacy/instruments/gold"> Золото &gt;&gt; </a>
     </div>
     </div>
 </div>
