--- a/literacy/instruments/gold.html
+++ b/literacy/instruments/gold.html
@@ -17,7 +17,7 @@
 
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2020-01-04" />
-        <meta property="og:article:modified_time" content="2020-01-04" />
+        <meta property="og:article:modified_time" content="2020-01-05" />
 <meta property="og:title" content="Золото" />
 <meta property="og:url" content="https://onfin.github.io/literacy/instruments/gold" />
 
@@ -58,7 +58,7 @@
             <h1>Золото</h1>
             <div class="meta">
                     <p class="description">Виды, специфика, риски и доходность вложений в золото.</p>
-                        <p> Обновлено: <time>2020-01-04</time> </p>
+                        <p> Обновлено: <time>2020-01-05</time> </p>
             </div>
         </header>
 
@@ -66,10 +66,10 @@
             <p>Начнём с самых главных <a href="https://www.gold.org/goldhub/data/demand-and-supply">фактов про золото</a>:</p>
 <ul>
 <li>потребление — 330 тонн/год и снижается,</li>
-<li>производство — 3300 тонн/год (да, в 10 раз больше потребления) и растёт,</li>
+<li>добыча — 3300 тонн/год (да, в 10 раз больше потребления) и растёт,</li>
 <li>запасы в хранилищах — 180.000 тонн (да, почти на шестьсот лет вперёд без учёта падения спроса и роста добычи).</li>
 </ul>
-<p>Т.е. цена золота обусловлена лишь спекулятивными действиями центробанков, для которых это удобный инструмент управления валютным курсом. Другой роли у него сейчас нет, да и эта неуклонно снижается.</p>
+<p>Однако, часто вы можете увидеть совсем другие цифры спроса и предложения, которые говорят об их сбалансированности или даже «страшном дефиците» золота на рынке, из-за которого оно должно стоить «как никогда в истории». Связано это с тем, что (а) существует огромный рынок вторичной переработки золота, (б) существует огромный «спекулятивный» рынок золота, где его покупают и продают инвестиционные фонды, банки и центробанки. Поэтому в спрос на золото относят и спрос со вторичной переработки, и «инвестиционный» спрос, а в предложение очень часто забывают включить или одно, или другое, или сразу оба, получая «по желанию» или сбалансированность, или дефицит.</p>
 <p><a href="https://www.measuringworth.com/datasets/gold/">Стоимость золота</a>, с поправкой на инфляцию и в сравнении со <a href="https://www.quandl.com/data/BP/CRUDE_OIL_PRICES-Crude-Oil-Prices-from-1861">стоимостью нефти</a>, ведёт себя так:</p>
 <p><img src=/literacy/instruments/gold.svg style="width: 100%; height: 50wv" /></p>
 <p>Здесь за единицу взята средняя цена за весь период наблюдений. Видно как после повсеместной отмены золотого стандарта стоимость золота очень точно повторяет движение стоимости нефти. Я не изучал природу этой корреляции и, возможно, она случайна, но всё равно настораживает (cтоит заметить, что цена на золото-нефть не скоррелирована с <a href="https://www.investing.com/indices/sp-gsci-commodity-total-return-historical-data">ценой корзины биржевых товаров</a>).</p>
@@ -121,7 +121,7 @@
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
 
-            <p>Может быть, вам показалось, но способов получить гарантированную доходность за счёт каких бы то ни было финансовых инструментов, портфелей или торговых стратегий НЕ СУЩЕСТВУЕТ.</p>
+            <p>Может быть, вам показалось, но способов получить гарантированную доходность за счёт каких бы то ни было финансовых инструментов, портфелей или торговых стратегий НЕ СУЩЕСТВУЕТ. Хуже того, способов гарантированно сохранить свой капитал тоже НЕ СУЩЕСТВУЕТ.</p>
 
             <p>Материалы сайта могут быть использованы на условиях лицензии <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA</a>.
             <br> &copy; <a href="https://t.me/blksv" rel="author">Андрей Болкисев</a>, 2020.
