add realty to index

--- a/literacy/index.html
+++ b/literacy/index.html
@@ -92,6 +92,7 @@
 <li><a href="/literacy/instruments/deposits2">Банковские счета, карты и вклады</a></li>
 <li><a href="/literacy/instruments/bonds">Облигации</a></li>
 <li><a href="/literacy/instruments/gold">Золото</a></li>
+<li><a href="/literacy/instruments/realty">Недвижимость</a></li>
 </ol>
         </div>
         <aside>
