--- a/literacy/instruments/gold.html
+++ b/literacy/instruments/gold.html
@@ -113,6 +113,7 @@
                 <a href="/literacy"> &uarr; Грамотность &uarr; </a>
     </div>
     <div class="pure-u-1-3 right">
+                <a href="/literacy/instruments/realty"> Недвижимость &gt;&gt; </a>
     </div>
     </div>
 </div>
