--- a/calculators/index.html
+++ b/calculators/index.html
@@ -17,7 +17,7 @@
 
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-10-13" />
-        <meta property="og:article:modified_time" content="2019-11-23" />
+        <meta property="og:article:modified_time" content="2020-01-10" />
 <meta property="og:title" content="Калькуляторы" />
 <meta property="og:url" content="https://onfin.github.io/calculators" />
 
@@ -85,6 +85,7 @@
 <li><strong>Финансовый профиль жизни обычного человека и инвестора</strong></li>
 </ul>
 </li>
+<li><a href="/calculators/fees_taxes_effect">Влияние комиссий и налогов на финансовый результат</a></li>
 </ol>
         </div>
         <aside>
